# tepco-forcast-api

./: .gitpod.yml  Makefile  README.md  generate-index-html.bash  index.html  pyproject.toml  sample_print.py  today.py
.github/workflows/: main.yaml
api/: daily_results_hourly.json  expected_maximum_power.json  expected_maximum_power_tomorrow.json  maximum_usage.json  peak_period_supply.json  peak_period_suppy_tomorrow.json  today_results_per_5min.json  usage_peak_period_expected_power.json  usage_peak_period_expected_power_tomorrow.json  usage_peak_period_supply.json  usage_peak_period_supply_tomorrow.json
public/api/: daily_results_hourly.json  expected_maximum_power_tomorrow.json  maximum_usage.json  peak_period_supply.json  today_results_per_5min.json  usage_peak_period_supply_tomorrow.json
