[tool.poetry]
name = "tepco-forcast-api"
version = "0.1.0"
description = ""
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
